--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="DevlUp Labs - Summer of Code" />
     <meta property="og:description" content="Explore projects, connect with mentors, and apply to contribute" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://github.com/lakshyajain-0291/Devlup_SOC/blob/main/public/screenshots/screenshot.png?raw=true" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@devlup_labs" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://github.com/lakshyajain-0291/Devlup_SOC/blob/main/public/screenshots/screenshot.png?raw=true" />
   </head>
 
   <body>
