feat: change whole theme to winter, added back ongoing projects, apply page and added new timeline page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevlUp Labs - Summer of Code</title>
-    <meta name="description" content="Terminal-themed application for DevlUp Labs Summer of Code projects" />
+    <title>DevlUp Labs - Projects Archive</title>
+    <meta name="description" content="Terminal-themed application for DevlUp Projects Archive – All Projects & Programs" />
     <meta name="author" content="DevlUp Labs" />
     <link rel="icon" href="/uploads/a04b4cd1-93e6-496f-a36f-bae3a41203d5.png" type="image/png">
 
-    <meta property="og:title" content="DevlUp Labs - Summer of Code" />
+    <meta property="og:title" content="DevlUp Labs - Projects Archive" />
     <meta property="og:description" content="Explore projects, connect with mentors, and apply to contribute" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://github.com/lakshyajain-0291/Devlup_SOC/blob/main/public/screenshots/screenshot.png?raw=true" />
